Preventing code spans from wrapping

--- a/src/_0_styles/custom-styles.scss
+++ b/src/_0_styles/custom-styles.scss
@@ -54,6 +54,7 @@ footer {
 			border-radius: 3px;
 			padding: 2px 3px;
 			font-size: 0.85em;
+			white-space: nowrap;
 		}
 	}
 
